# Project-AGI

./: .gitignore  README.md  config.yaml  install.bat  launch.py  prompt.md  pyproject.toml  state.json
src/AGI/: main.py
src/AGI/preprocess/: load_url.py  research.py  scrape_url.py  summarize.py
src/AGI/utility/: get_config.py  get_path.py  key_manager.py  read_file.py  update_state.py
src/AGI/worker/: agent.py  pipeline.py
